lang/checker/tests/cases/pass/function-body/other_scopes.slt
local a = "Hi"
local b = function()
	local c: string = a
end