lang/checker/tests/cases/fail/resolve-type-match/types/intersection.slt
type A = { name: string } & { value: number }
local a: A = {
	name = "Hi"
}